# rmaiig-lmql-demo

./: .gitignore  00_intro.ipynb  01_jokes.lmql  02_jokes-sample.lmql  02_knock-knock.lmql  03_summarization.ipynb  04_llama-cpp.ipynb  05_distribution.ipynb  06_multiple-choice.ipynb  Readme.md  env-example  pyproject.toml
lmql_demo/: download.py
